--- a/homework/Day_002_HW.ipynb
+++ b/homework/Day_002_HW.ipynb
@@ -26,25 +26,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid character in identifier (<ipython-input-1-6712ca1b4ca8>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-6712ca1b4ca8>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    我認為機器學習可以在醫療領域發光發熱，近年來deep learning在圖像識別上有很大的突破，藉由機器學習可以讓機器自動辨識醫學影像，判斷患者的疾病，\u001b[0m\n\u001b[1;37m                             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid character in identifier\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'\\n我認為機器學習可以在醫療領域發光發熱，近年來deep learning在圖像識別上有很大的突破，藉由機器學習可以讓機器自動辨識醫學影像，判斷患者的疾病，像是腫瘤、視網膜病變等等，甚至是能夠進行疾病風險預測，所謂預防勝於治療，若能提早得知患病風險那麼就能提早做出防備，目前還有許多疾病的成因不明，若能透過一些特徵來提早預測疾病風險，定時追蹤並在病變第一時間治療，相信可以讓疾病對人體的影響力降到最小。近年來，人類也越來越長壽，高齡醫療照護也是相當重要的一環，加上老年人的身體較虛弱，若病變沒有在第一時間發現，後果時常不堪設想。疾病一直都困擾著人類，人體的器官隨時都乘載著發病的風險，人生若無病痛則是相當幸福的事，因此我認為機器學習未來在醫療領域上有很大的舞台。\\n'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "'''\n",
-    "我認為機器學習可以在醫療領域發光發熱，近年來deep learning在圖像識別上有很大的突破，藉由機器學習可以讓機器自動辨識醫學影像，判斷患者的疾病，\n",
-    "像是腫瘤、視網膜病變等等，甚至是能夠進行疾病風險預測，所謂預防勝於治療，若能提早得知患病風險那麼就能提早做出防備，目前還有許多疾病的成因不明，\n",
-    "若能透過一些特徵來提早預測疾病風險，定時追蹤並在病變第一時間治療，相信可以讓疾病對人體的影響力降到最小。近年來，人類也越來越長壽，高齡醫療照護\n",
-    "也是相當重要的一環，加上老年人的身體較虛弱，若病變沒有在第一時間發現，後果時常不堪設想。疾病一直都困擾著人類，人體的器官隨時都乘載著發病的風險\n",
-    "，人生若無病痛則是相當幸福的事，因此我認為機器學習未來在醫療領域上有很大的舞台。\n",
+    "我認為機器學習可以在醫療領域發光發熱，近年來deep learning在圖像識別上有很大的突破，藉由機器學習可以讓機器自動辨識醫學影像，判斷患者的疾病，像是腫瘤、視網膜病變等等，甚至是能夠進行疾病風險預測，所謂預防勝於治療，若能提早得知患病風險那麼就能提早做出防備，目前還有許多疾病的成因不明，若能透過一些特徵來提早預測疾病風險，定時追蹤並在病變第一時間治療，相信可以讓疾病對人體的影響力降到最小。近年來，人類也越來越長壽，高齡醫療照護也是相當重要的一環，加上老年人的身體較虛弱，若病變沒有在第一時間發現，後果時常不堪設想。疾病一直都困擾著人類，人體的器官隨時都乘載著發病的風險，人生若無病痛則是相當幸福的事，因此我認為機器學習未來在醫療領域上有很大的舞台。\n",
     "'''"
    ]
   },
